# se-toolkit-hackathon

./: .gitignore  AGENTS.md  DEPLOYMENT_GUIDE.md  LICENSE  PROJECT_COMPLETE.md  README.md  STAGE_2_CHANGES.md  STAGE_2_FINAL_REPORT.md  STAGE_2_SUMMARY.md  STAGE_3_FINAL_REPORT.md  STAGE_3_FINAL_VERIFICATION.md  STAGE_3_QUICK_REF.md  STAGE_6_FINAL_REPORT.md  STAGE_6_IMPLEMENTATION.md  STAGE_6_QUICK_REF.md  STAGE_6_REQUIREMENTS_MATRIX.md  STAGE_7_API_CONTRACT.md  STAGE_7_COMPLETE.md  STAGE_7_HISTORY_REPORT.md  STAGE_7_QUICK_REF.md  docker-compose.yml  grader_dev.db  verify_bot_stage6.py  verify_frontend_stage3.js  verify_stage2.py
backend/: .env.example  ai_service.py  ai_validator.py  check_contract.py  check_pipeline.py  create_test_images.py  final_check.py  grader_dev.db  grader_test.db  main.py  proof_openai_pipeline.py  proof_render_contract.py  pyproject.toml  requirements.txt  run_bug_tests.py  test_ai_service.py  test_grading_guidance.py  test_main.py  test_ollama.py  test_openai_pipeline.py  test_openrouter.py  verify_all.py  verify_startup.py
backend/ai/: contracts.py  grading_guidance.py  openai_responses.py
backend/ai/analyzer/: __init__.py  openai_analyzer.py  qwen_analyzer.py
backend/ai/validator/: __init__.py  normalizer.py  ollama_validator.py  openai_validator.py  quantitative_checker.py
bot/: bot.py  requirements.txt  verify_imports.py
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  render_contract_check.mjs  vite.config.js
frontend/src/: App.css  App.jsx  index.css  utils.js
nanobot/: .keep  README.md
(+3 files in other folders)
